crates/pattern_memory/tests/snapshots/config__valid_mode_a_config.snap
---
source: crates/pattern_memory/tests/config.rs
expression: config
---
mount:
  mode: A
  memory_db: memory.db
personas:
  entries:
    - slot: default
      persona: "@pattern-default"
isolate_from_persona:
  policy: none
jj:
  enabled: false
  max_new_file_size: 100MiB
project:
  name: pattern-dev
  created_at: "2026-04-19T12:00:00Z"
backup: ~
