crates/pattern_memory/tests/snapshots/config__valid_sidecar_config.snap
---
source: crates/pattern_memory/tests/config.rs
expression: config
---
mount:
  mode: Sidecar
  memory_db: memory.db
personas:
  entries:
    - slot: default
      persona: "@pattern-default"
isolate_from_persona:
  policy: full
jj:
  enabled: true
  max_new_file_size: 100MiB
project:
  name: colocated-project
  created_at: "2026-04-20T09:00:00Z"
backup: ~
file_policy:
  rules: []
