crates/pattern_memory/tests/snapshots/config__valid_standalone_config.snap
---
source: crates/pattern_memory/tests/config.rs
assertion_line: 111
expression: config
---
mount:
  mode: Standalone
  memory_db: memory.db
personas:
  entries:
    - slot: default
      persona: "@pattern-default"
    - slot: focused
      persona: "@pattern-focus"
isolate_from_persona:
  policy: core-only
jj:
  enabled: true
  max_new_file_size: 50MiB
project:
  id: ~
  name: pattern-research
  created_at: "2026-04-20T08:00:00Z"
backup: ~
file_policy:
  rules: []
partner: ~
